Fix z-index issues of based-on select on connect project page

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
@@ -111,7 +111,7 @@
 }
 
 #based-on-field {
-  overflow: hidden;
+  max-width: calc(100% - 44px);
 }
 
 mdc-select {
